--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="/static/css/global.css" />
     <script src="/static/js/init.js" type="module" async></script>
 
-    <!-- UIKit -->
-    <link rel="stylesheet" href="/static/css/uikit.min.css" />
-    <script src="/static/js/uikit.min.js" async />
-    <script src="/static/uikit-icons.min.js" async />
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <title>You-Vid</title>
   </head>
