--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/static/init.js" type="module" async></script>
+    __WASM_BUILDER_CSS__
+
     <link rel="stylesheet" src="/static/global.css"/>
 
     <script src="/static/js/bootstrap.bundle.min.js" async></script>
@@ -22,4 +23,6 @@
       __INITIAL_HTML__
     </main>
   </body>
+
+  __WASM_BUILDER_JAVASCRIPT__
 </html>
